--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,1 @@
-P:\Classes\University\Fourth Year\First Semester\Internship\Monthly Presentations\*
+First Semester/Internship/Monthly Presentations/
